--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "commander": "2.2.0",
     "uglify-js": "2.4.13",
-    "underscore": "1.6.0"
+    "underscore": "1.6.0",
+    "async": "0.8.0"
   },
   "bin": {
     "rails-source-maps": "./bin/rails-source-maps"
